# rpg-api

./: pyproject.toml
docs/: db-diagram.mwb  db-diagram.mwb.bak  game-design.md  ideia-inicial.txt
src/rpg_api/: config.py
src/rpg_api/domain/models/: base.py  game_state.py  player.py  room.py
src/rpg_api/domain/repositories/: game_state_repository.py  player_repository.py  room_repository.py
src/rpg_api/domain/schemas/: player_schemas.py  room_schemas.py
src/rpg_api/services/: player_service.py
